# skagit-flats

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DISPLAY_DESIGN.md  Dockerfile  Makefile  QUICKSTART.md  README.md  config.sample.toml  destinations.sample.toml  docker-compose.yml
.github/workflows/: ci.yml
.runtime/: session_id
deploy/: skagit-flats.service
docs/architecture/: overview.md  trmnl-comparison-2026-04-04.md
docs/decisions/: cargo-zigbuild-aarch64.md  road-closures-api.md  trail-campsite-api.md
docs/product/: destination-relevance.md  destination-ui-flow.md  installation-first-run.md  operator-workflow.md  overview.md  planning-view.md  trip-planning.md  trip-recommendation-model.md
scripts/: setup.sh
src/: lib.rs  main.rs
src/app/: mod.rs
src/config/: mod.rs
src/display/: mod.rs  waveshare.rs
src/domain/: mod.rs
src/evaluation/: mod.rs
src/presentation/: mod.rs
src/render/: font.rs  font_ttf_spike.rs  layout.rs  mod.rs
src/sources/: mod.rs  noaa.rs  road_closures.rs  trail_conditions.rs  usgs.rs  wsdot.rs
src/sources/fixtures/: noaa_observation.json  nps_alerts.json  usgs_gauge.json  usgs_sites.rdb  wsdot_ferries.json  wsdot_highway_alerts.json
src/web/: mod.rs
tests/: golden_tests.rs  hardware_tests.rs  integration_tests.rs  live_source_tests.rs
tests/fixtures/: ferry.json  river.json  weather.json
