[package]
name = "skagit-flats"
version = "0.1.0"
edition = "2021"
description = "Thin e-ink display client — fetches a pre-rendered PNG and pushes it to a Waveshare 7.5\" panel"
license = "MIT"

[features]
default = []
# Enable the SPI hardware display driver (Raspberry Pi only).
hardware = ["rppal"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# PNG decode for the fetched image.
image = { version = "0.24", default-features = false, features = ["png"] }

# Blocking HTTP client for the fetch loop.
ureq = "2"

# Raspberry Pi SPI/GPIO — optional, only needed for hardware mode.
rppal = { version = "0.17", optional = true }

thiserror = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
